--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -75,7 +75,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -88,7 +88,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-in">
       <h1>Welcome to D'Amico Technologies</h1>
-      <h2>IT consulting firm for your small business needs &amp; more...</h2>
+      <h2>Freelance services for your small business needs &amp; more...</h2>
       <img src="assets/img/hero-img.png" alt="Hero Imgs" data-aos="zoom-out" data-aos-delay="100">
       <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
       <!-- <div class="btns">
@@ -107,8 +107,8 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
 
-          <h2>simple systeme fordiscount </h2>
-          <p class="separator">Integer cursus bibendum augue ac cursus .</p>
+          <h2>Services  </h2>
+          <p class="separator">Helping clients sort through the newest technology to find what best suits their current and future needs.</p>
 
         </div>
       </div>
@@ -120,9 +120,10 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/cloud.svg" alt="img">
-              <h4>introducing whatsapp</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-              <a href="#">read more</a>
+              <h4>Web Development</h4>
+              <p>Web site building and hosting</p>
+              <p>UX/UI designs</p>
+              <a href="#">contact us</a>
 
             </div>
           </div>
@@ -131,9 +132,9 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/planet.svg" alt="img">
-              <h4>user friendly interface</h4>
+              <h4>Microservices</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-              <a href="#">read more</a>
+              <a href="#">contact us</a>
 
             </div>
           </div>
@@ -142,9 +143,9 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/asteroid.svg" alt="img">
-              <h4>build the app everyone love</h4>
+              <h4>eCommerce Solutions</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-              <a href="#">read more</a>
+              <a href="#">contact us</a>
 
             </div>
           </div>
@@ -317,7 +318,7 @@
 
           <div class="col-md-6 col-md-4 col-lg-3 container-fluid" data-aos="zoom-in" data-aos-delay="100">
             <div class="team-block bottom">
-              <img src="assets/img/team/ceo-lou.jpg" class="img-responsive" alt="img">
+              <img src="assets/img/team/lou-fake-photo.png" class="img-responsive" alt="img">
               <div class="team-content">
                 <ul class="list-unstyled">
                   <!-- <li><a href="#"><i class="bi bi-facebook"></i></a></li>
