--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about-us">About</a></li>
+          <li><a class="nav-link scrollto" href="#get-started">Services</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -122,6 +123,7 @@
               <h4>Web Development</h4>
               <p>Custom Websites</p>
               <p>Feature Add-ons</p>
+              <p>Site Maintenance</p>
               <a href="#contact">contact us</a>
 
             </div>
@@ -132,8 +134,9 @@
 
               <img src="assets/img/svg/paint-palette.svg" alt="img">
               <h4>UX/UI Design</h4>
-              <p>Seamless Interactions</p>
               <p>Intuitive Layouts</p>
+              <p>User-friendly Interfaces</p>
+              <p>Seamless Interactions</p>
               <a href="#contact">contact us</a>
 
             </div>
@@ -145,6 +148,7 @@
               <img src="assets/img/svg/cloud.svg" alt="img">
               <h4>eCommerce Solutions</h4>
               <p>Website Builders</p>
+              <p>Affiliate Marketing</p>
               <p>Platform Maintenance</p>
               <a href="#contact">contact us</a>
 
@@ -162,23 +166,22 @@
         <div class="row justify-content-center">
 
           <div class="col-md-5 col-lg-3">
-            <img src="assets/img/about-img.png" alt="About" data-aos="zoom-in" data-aos-delay="100">
+            <img src="assets/img/Humaaans.png" alt="About" data-aos="zoom-in" data-aos-delay="100">
           </div>
 
           <div class="col-md-7 col-lg-5">
             <div class="about-content" data-aos="fade-left" data-aos-delay="100">
 
-              <h2><span>D'Amico Technologies</span>UI Design Mobile </h2>
-              <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-              </p>
+              <h2><span>D'Amico Technologies</span></h2>
+              <p>Web hosting and software company. We help clients and small businesses sort through the newest technologies to find what suits their current and future needs.</p>
 
-              <ul class="list-unstyled">
+              <!-- <ul class="list-unstyled">
                 <li><i class="vi bi-chevron-right"></i>Creative Design</li>
                 <li><i class="vi bi-chevron-right"></i>Retina Ready</li>
                 <li><i class="vi bi-chevron-right"></i>Easy to Use</li>
                 <li><i class="vi bi-chevron-right"></i>Unlimited Features</li>
                 <li><i class="vi bi-chevron-right"></i>Unlimited Features</li>
-              </ul>
+              </ul> -->
 
             </div>
           </div>
@@ -334,7 +337,7 @@
 
           <div class="col-md-6 col-md-4 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-block bottom">
-              <img src="assets/img/team/lou-filler-photo.png" class="img-responsive" alt="img">
+              <img src="assets/img/team/eugene.png" class="img-responsive" alt="img">
               <div class="team-content">
                 <ul class="list-unstyled">
                   <!-- <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -382,7 +385,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="padd-section text-center">
+    <!-- <section id="testimonials" class="padd-section text-center">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
 
